Cleaning up documentation
