# docs/swagger.yaml
@@ -48,8 +48,8 @@ paths:
       produces:
       - application/json
       responses:
-        "204":
-          description: No Content
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/main.dog'
         "500":
@@ -75,6 +75,10 @@ paths:
           description: Accepted
           schema:
             $ref: '#/definitions/main.dog'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
         "404":
           description: Not Found
           schema:
@@ -101,6 +105,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/main.dog'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
         "404":
           description: Not Found
           schema:
@@ -131,10 +139,14 @@ paths:
       produces:
       - application/json
       responses:
-        "204":
-          description: No Content
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/main.dog'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
         "404":
           description: Not Found
           schema:
